--- a/@library/songs-list.html
+++ b/@library/songs-list.html
@@ -1,5 +1,26 @@
-<ul @name="songs-list">
-    <li :for="song in songs">
-        <a href="/songs/{ song.slug }">{ song.authors } - { song.title } ({ song.original_artist })</a>
-    </li>
-</ul>
+<table @name="songs-list">
+    <thead>
+        <tr>
+            <th>Titres</th>
+            <th>Paroles</th>
+            <th>Télécharger</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr :for="song in songs">
+            <td><a href="/songs/{ song.slug }"><span class="song">{ song.authors } - { song.title } </span>
+                    <p class="artist">({ song.original_artist })</p>
+                </a>
+            </td>
+            <td>Paroles</td>
+            <td><button><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-download-icon lucide-download">
+                        <path d="M12 15V3" />
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <path d="m7 10 5 5 5-5" />
+                    </svg></button></td>
+        </tr>
+    </tbody>
+</table>
+<songs-list :songs="songs">
